--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memory Game</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src="./index.js"></script>
+    <script src="./src/jogoDaMemoria.js"></script>
+    <script src="./src/tela.js"></script>
 </head>
 <body class="container-fluid">
     <br />
@@ -13,27 +16,8 @@
         <button type="button" class="btn btn-danger" id="mostrarTudo">Mostrar Tudo</button>
     </div>
     <br />
-    <div class="row">
-        <div class="col-md-3">
-            <div class="card" style="width: 50%;">
-                <img src="./arquivos/batman.png" class="card-img-top" alt="...">
-            </div>
-        </div>
-        <div class="col-md-3">
-            <div class="card" style="width: 50%;">
-                <img src="./arquivos/ciclop.png" class="card-img-top" alt="...">
-            </div>
-        </div>
-        <div class="col-md-3">
-            <div class="card" style="width: 50%;">
-                <img src="./arquivos/deadpool.png" class="card-img-top" alt="...">
-            </div>
-        </div>
-        <div class="col-md-3">
-            <div class="card" style="width: 50%;">
-                <img src="./arquivos/mulhermaravilha.png" class="card-img-top" alt="...">
-            </div>
-        </div>
+    <div id="conteudo" class="row">
+
     </div>
 </body>
 </html>
