:construction: Adiciona tag com alert para mostrar sucesso e fracasso

--- a/index.html
+++ b/index.html
@@ -19,5 +19,10 @@
     <div id="conteudo" class="row">
 
     </div>
+    <div class="row container-fluid">
+        <div id="mensagem" class="alert alert-success invisible" role="alert">
+            Combinação correta!
+        </div>
+    </div>
 </body>
 </html>
